--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -41,6 +41,9 @@
             padding: 10px;
         }
     }
+    ::v-deep .ant-switch {
+        background-color: #1890ff;
+    }
     .ml-3 {
         margin-left: 3px;
     }
@@ -73,7 +76,9 @@
     font-size: 10px;
     border: none;
     border-radius: 5px;
-    padding: 5px 10px;;
+    padding: 9px 9px;
+    margin-left: 3px;
+    cursor: pointer;
 }
 .deduction-main {
     max-height: 200px;
