--- a/src/views/PA/PA6/PA630/style/style.scss
+++ b/src/views/PA/PA6/PA630/style/style.scss
@@ -7,8 +7,7 @@
     align-items: center;
 }
 .format-settings{
-    padding-top: 15px;
-    font-size: 16px;
+    font-size: 14px;
     display: flex;
     align-items: center;
     .format-settings-text{
@@ -16,11 +15,10 @@
     }
 }
 .tax-select{
-    padding-top: 15px;
+    // padding-top: 15px;
 }
 
 .created-date{
-    padding-top: 15px;
     float: right;
     display: flex;
     align-items: center;
@@ -38,3 +36,19 @@
 .custom-action {
     text-align: center;
 }
+.lable-item {
+    font-size: 16px;
+    font-weight: 600;
+  }
+  .page-content {
+    .header-group {
+      align-items: top;
+      margin-top: 5px;
+    }
+    .lable-item {
+      font-size: 14px;
+    }
+    ::v-deep .ant-switch-checked {
+      background-color: black ;
+    }
+  }
