--- a/src/views/PA/PA7/PA720/style/style.scss
+++ b/src/views/PA/PA7/PA720/style/style.scss
@@ -155,9 +155,11 @@
       display: none;
     }
   }
-  ::v-deep .ant-form-item-control-input-content {
-    display: flex;
-    align-items: center;
+  ::v-deep .input-group-4 {
+    .ant-form-item-control-input-content {
+      display: flex;
+      align-items: center;
+    }
   }
   ::v-deep .dx-datagrid-text-content {
     white-space: pre-wrap;
@@ -168,7 +170,7 @@
     > td:not(.dx-focused) {
     color: black;
   }
-  ::v-deep.ant-btn.ant-dropdown-trigger{
+  ::v-deep.ant-btn.ant-dropdown-trigger {
     height: auto;
   }
   ::v-deep .custom-button-checkbox {
@@ -176,15 +178,15 @@
     height: 91.5%;
 
     .dx-button-content {
-        padding: 5px 5px;
-        display: inline-flex;
-        align-items: center;
+      padding: 5px 5px;
+      display: inline-flex;
+      align-items: center;
     }
 
     span {
-        color: blue;
+      color: blue;
     }
-}
+  }
   .button-open-tab {
     color: #fff;
     background-color: #00f;
@@ -205,5 +207,9 @@
     display: inline-flex;
     align-items: center;
     height: 91.5%;
+  }
+  .validate{
+    color: red;
+    font-size: 12px;
   }
 }
