--- a/src/layouts/style/style.scss
+++ b/src/layouts/style/style.scss
@@ -4,7 +4,7 @@
 }
 
 .ant-layout.ant-layout-has-sider {
-	min-height: calc(100vh - 64px);
+	min-height: 90vh;
 }
 
 .components-grid-demo-flex .ant-col {
