--- a/src/views/PA/PA7/PA710/style/style.scss
+++ b/src/views/PA/PA7/PA710/style/style.scss
@@ -26,6 +26,9 @@
     ::v-deep .ant-form-item-label>label {
         width: 180px;
         padding-left: 10px;
+        
+    }
+    ::v-deep .red .ant-form-item-label>label {
         color: red;
     }
 
@@ -39,7 +42,7 @@
         >div {
             border: 1px solid #d7d7d7;
             padding: 10px;
-            min-height: 500px;
+            min-height: 700px;
         }
     }
 
@@ -49,6 +52,11 @@
             color: #666666;
             padding-left: 5px;
         }
+    }
+
+    ::v-deep .active-row-key {
+        background-color: #337AB7;
+        color: white;
     }
 
 }
