--- a/src/views/PA/PA7/PA710/style/style.scss
+++ b/src/views/PA/PA7/PA710/style/style.scss
@@ -42,7 +42,9 @@
         >div {
             border: 1px solid #d7d7d7;
             padding: 10px;
-            min-height: 700px;
+            height: 700px;
+            overflow:scroll;
+            overflow-x:hidden;
         }
     }
 
