--- a/src/views/PA/PA6/PA610/style/style.scss
+++ b/src/views/PA/PA6/PA610/style/style.scss
@@ -35,7 +35,7 @@
         >div {
             border: 1px solid #d7d7d7;
             padding: 10px;
-            min-height: 500px;
+            height: 100%;
         }
     }
 
