--- a/src/views/BF/BF3/BF330/style/stylePopup.scss
+++ b/src/views/BF/BF3/BF330/style/stylePopup.scss
@@ -1,6 +1,6 @@
 .custom-money {
     display: flex;
-    padding-left: 60px;
+    // padding-left: 60px;
     margin-bottom: 5px;
     align-items: center;
 
@@ -202,3 +202,7 @@
       color: red;
     }
   }
+
+.data-row-accounting {
+    margin: 15px 0;
+}
