--- a/src/views/base/styles/GridPrototype.scss
+++ b/src/views/base/styles/GridPrototype.scss
@@ -104,3 +104,31 @@ table {
     font-weight: 800;
   }
 }
+
+input{
+  border: 2px solid #5292F7;
+  outline-width: 0;
+  margin: 0;
+  padding: 1px 4px 0 2px;
+  font-family: Arial, Helvetica, sans-serif;
+  /*repeat from .handsontable (inherit doesn't work with IE<8) */
+  line-height: 1.3em;
+  /*repeat from .handsontable (inherit doesn't work with IE<8) */
+  font-size: inherit;
+  resize: none;
+  /*below are needed to overwrite stuff added by jQuery UI Bootstrap theme*/
+  display: inline-block;
+  color: #000;
+  border-radius: 0;
+  background-color: #FFF;
+  border:none;
+  width:80px;
+  height:100%;
+  font-family: Verdana, Helvetica, Arial, FreeSans, sans-serif;
+  font-size:12px;
+  padding: 0 4px 0 4px;
+}
+input:focus { 
+  border:2px solid #5292F7;
+  outline: none;
+}
