--- a/src/views/BF/BF3/BF330/style/stylePopup.scss
+++ b/src/views/BF/BF3/BF330/style/stylePopup.scss
@@ -204,5 +204,20 @@
   }
 
 .data-row-accounting {
-    margin: 15px 0;
+    border: 1px solid #ccc;
+    margin: 5px 0 10px 0 !important;
+    padding: 10px 0px;
+}
+::v-deep .ant-row.container_upload.custom-flex {
+    flex-direction: column;
+    width: 300px;
+    margin-left: 0 !important; 
+    margin-right: 0 !important;
+}
+::v-deep .ant-row.data-row-accounting {
+    // margin-left: 0 !important;
+    // margin-right: 0 !important;
+}
+::v-deep .delete_group span:first-child {
+    width: 200px;
 }
