--- a/src/views/PA/PA7/PA710/style/style.scss
+++ b/src/views/PA/PA7/PA710/style/style.scss
@@ -43,8 +43,6 @@
             border: 1px solid #d7d7d7;
             padding: 10px;
             height: 700px;
-            overflow:scroll;
-            overflow-x:hidden;
         }
     }
 
@@ -60,5 +58,8 @@
         background-color: #337AB7;
         color: white;
     }
+    ::v-deep #gridContainer {
+        height: 670px;
+      }
 
 }
