--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -139,3 +139,8 @@ $lenght: 50;
   color: gray;
   padding-left: 5px;
 }
+.icon_status_history{
+    width: 18px;
+    height: 18px;
+    margin-top: -1px;
+}
