--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -4,7 +4,7 @@
     
     ::v-deep .ant-form-item-label {
         >label {
-            width: 100px;
+            width: 85px;
         }
     }
     .top-content {
@@ -76,7 +76,7 @@
     font-size: 10px;
     border: none;
     border-radius: 5px;
-    padding: 9px 9px;
+    padding: 9px 7px;
     margin-left: 3px;
     cursor: pointer;
 }
@@ -118,4 +118,7 @@
 }
 ::v-deep .dx-datagrid-text-content {
    white-space: pre-wrap;
+}
+::v-deep .dx-button-mode-contained {
+    height: 34px;
 }
