--- a/src/views/PA/PA1/PA110/style/style.scss
+++ b/src/views/PA/PA1/PA110/style/style.scss
@@ -74,6 +74,7 @@
     background-color: blue;
     font-size: 10px;
     border: none;
+    height: 33px;
     border-radius: 5px;
     padding: 5px 10px;;
 }
