--- a/src/views/PA/PA6/PA610/style/style.scss
+++ b/src/views/PA/PA6/PA610/style/style.scss
@@ -22,6 +22,8 @@
     ::v-deep .ant-form-item-label>label {
         width: 180px;
         padding-left: 10px;
+    }
+    ::v-deep .red .ant-form-item-label>label {
         color: red;
     }
 
