--- a/src/views/PA/PA7/PA730/style/style.scss
+++ b/src/views/PA/PA7/PA730/style/style.scss
@@ -7,10 +7,12 @@
     align-items: flex-start;
     align-items: center;
   }
+
   .format-settings {
     font-size: 14px;
     display: flex;
     align-items: center;
+
     .format-settings-text {
       padding-left: 18px;
       font-size: 12px;
@@ -18,11 +20,13 @@
       margin-left: 5px;
       display: flex;
       align-items: center;
+
       img {
         margin-right: 3px;
       }
     }
   }
+
   .tax-select {
     padding-top: 15px;
   }
@@ -31,6 +35,7 @@
     float: right;
     display: flex;
     align-items: center;
+
     .lable-item {
       font-size: 14px;
     }
@@ -39,36 +44,52 @@
   .global-year {
     margin-top: 6px;
   }
+
   ::v-deep .custom-mail-group {
     .dx-button-content {
       padding: 3px;
     }
   }
+
   .group-mail-730 {
     cursor: pointer;
     margin: 0px 0px;
   }
+
   .mail-730 {
     margin-right: 10px;
   }
+
   .custom-action-icon {
     display: flex;
     justify-content: center;
   }
+
   .lable-item {
     font-size: 16px;
     font-weight: 600;
   }
+
   .page-content {
     .header-group {
       align-items: top;
       margin-top: 5px;
     }
+
     .lable-item {
       font-size: 14px;
     }
+
     ::v-deep .ant-switch-checked {
-      background-color: black ;
+      background-color: black;
     }
+  }
+
+  ::v-deep .dx-datagrid-text-content {
+    white-space: break-spaces;
+    text-align: left !important;
+  }
+  .text-right {
+    text-align: right !important;;
   }
 }
