--- a/src/views/BF/BF3/BF330/style/stylePopup.scss
+++ b/src/views/BF/BF3/BF330/style/stylePopup.scss
@@ -148,7 +148,7 @@
     margin-top: -35px;
 }
 
-::v-deep .dx-texteditor-input {
+::v-deep .input-float-right .dx-texteditor-input {
     margin-right: 10px;
     text-align: right;
 }
