--- a/src/views/PA/PA5/PA510/style/style.scss
+++ b/src/views/PA/PA5/PA510/style/style.scss
@@ -118,6 +118,7 @@
 }
 ::v-deep .dx-datagrid-text-content {
    white-space: pre-wrap;
+   text-align: left!important;
 }
 ::v-deep .dx-button-mode-contained {
     height: 34px;
