update code fix bug pa-520

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -155,6 +155,6 @@ $lenght: 50;
 }
 
 .ant-tooltip-inner {
-  background-color: black !important;
+  // background-color: black !important;
   color: white !important;
 }
