--- a/src/views/PA/PA1/PA120/style/style.scss
+++ b/src/views/PA/PA1/PA120/style/style.scss
@@ -1,99 +1,133 @@
 #pa-120 {
-    margin-top: 10px;
-    #pa-120-gridContainer{
-        max-height: 695px;
+  margin-top: 10px;
+  #pa-120-gridContainer {
+    max-height: 695px;
+  }
+  .total-user {
+    background-color: #17375e;
+    color: white;
+    display: flex;
+    align-items: center;
+
+    > div {
+      font-size: 16px;
+      width: 50%;
+      text-align: center;
+      line-height: 16px;
+
+      .dx-icon-user {
+        font-size: 55px;
+      }
     }
-    .total-user {
-        background-color: #17375E;
-        color: white;
-        display: flex;
-        align-items: center;
+  }
+  ::v-deep .custom-layout {
+    padding: 10px 10px 10px 0;
 
-        >div {
-            font-size: 16px;
-            width: 50%;
-            text-align: center;
-            line-height: 16px;
-
-            .dx-icon-user {
-                font-size: 55px;
-            }
-        }
+    > div {
+      border: 1px solid #d7d7d7;
+      padding: 10px;
+      height: 100%;
     }
-    ::v-deep .custom-layout {
-        padding: 10px 10px 10px 0;
+  }
+  .current-user {
+    background-color: #d99694;
+    color: white;
+    display: flex;
+    align-items: center;
 
-        >div {
-            border: 1px solid #d7d7d7;
-            padding: 10px;
-            height: 100%;
-        }
+    > div {
+      font-size: 16px;
+      width: 50%;
+      text-align: center;
+      line-height: 16px;
+
+      .dx-icon-user {
+        font-size: 55px;
+      }
     }
-    .current-user {
-        background-color: #D99694;
-        color: white;
-        display: flex;
-        align-items: center;
+  }
 
-        >div {
-            font-size: 16px;
-            width: 50%;
-            text-align: center;
-            line-height: 16px;
+  .leave-user {
+    background-color: #bfbfbf;
+    color: white;
+    display: flex;
+    align-items: center;
 
-            .dx-icon-user {
-                font-size: 55px;
-            }
-        }
+    > div {
+      font-size: 16px;
+      width: 50%;
+      text-align: center;
+      line-height: 16px;
+
+      .dx-icon-user {
+        font-size: 55px;
+      }
     }
+  }
 
-    .leave-user {
-        background-color: #BFBFBF;
-        color: white;
-        display: flex;
-        align-items: center;
+  .ant-form-item {
+    margin-bottom: 10px;
+  }
 
-        >div {
-            font-size: 16px;
-            width: 50%;
-            text-align: center;
-            line-height: 16px;
-
-            .dx-icon-user {
-                font-size: 55px;
-            }
-        }
+  .custom-note {
+    > span {
+      font-size: 11px;
+      color: #666666;
+      padding-left: 5px;
     }
-    
+  }
 
+  .custom-grade-cell {
+    display: flex;
+    align-items: center;
 
-    .ant-form-item {
-        margin-bottom: 10px;
+    .custom-grade-cell-tag {
+      padding: 3px 10px;
+      border: 1px solid #304967;
+      margin-right: 10px;
+      border-radius: 5px;
+      min-width: 50px;
+      text-align: center;
     }
-
-    .custom-note {
-        >span {
-            font-size: 11px;
-            color: #666666;
-            padding-left: 5px;
-        }
+  }
+  ::v-deep .active-row-key {
+    background-color: #337ab7;
+    color: white;
+  }
+  .toolTipError_wrap {
+    position: relative;
+    .toolTipError {
+      position: absolute;
+      top: -30px;
+      background-color: black;
+      color: #fff;
+      text-align: center;
+      padding: 5px 0;
+      border-radius: 6px;
+      position: absolute;
+      transform: translateX(40%);
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      color: rgba(0, 0, 0, 0.85);
+      font-size: 14px;
+      font-variant: tabular-nums;
+      line-height: 1.5715;
+      list-style: none;
+      font-feature-settings: "tnum";
+      position: absolute;
+      z-index: 1070;
+      display: block;
+      width: -webkit-max-content;
+      width: -moz-max-content;
+      width: max-content;
+      max-width: 250px;
+      visibility: visible;
     }
-
-    .custom-grade-cell {
-        display: flex;
-        align-items: center;
-        
-        .custom-grade-cell-tag {
-            padding: 3px 10px;
-            border: 1px solid #304967;
-            margin-right: 10px;
-            border-radius: 5px;
-            min-width: 50px;
-            text-align: center;
-        }
+  }
+  #pa-120-gridContainer {
+    :deep td {
+      vertical-align: middle;
     }
-    ::v-deep .active-row-key {
-        background-color: #337AB7;
-        color: white;
-    }
+  }
 }
