--- a/src/views/PA/PA7/PA720/style/style.scss
+++ b/src/views/PA/PA7/PA720/style/style.scss
@@ -96,7 +96,7 @@
     > div {
       border: 1px solid #d7d7d7;
       padding: 10px;
-      min-height: 770px;
+      max-height: 770px;
     }
   }
   ::v-deep .content-btm col:first-child {
