--- a/src/views/PA/PA6/PA620/style/style.scss
+++ b/src/views/PA/PA6/PA620/style/style.scss
@@ -61,39 +61,27 @@
         padding: 0px;
     }
 
-    .header-detail-main {
-        margin-top: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
 
-        .table-detail-left {
-            >div {
-                margin-right: 5px;
-            }
-
-            .text-box-1 {
-                padding: 5px 10px;
-                border-radius: 5px;
-                color: white;
-                background-color: gray;
-            }
-
-            .text-box-2 {
-                padding: 5px 10px;
-                border-radius: 5px;
-                color: white;
-                background-color: black;
-            }
-        }
-
-        .table-detail-right {
-            >div {
-                margin-left: 5px;
-            }
-        }
-
+    .text-box-1 {
+        padding: 5px 10px;
+        border-radius: 5px;
+        color: white;
+        background-color: gray;
     }
+
+    .text-box-2 {
+        padding: 5px 10px;
+        border-radius: 5px;
+        color: white;
+        background-color: black;
+    }
+
+    .table-detail-right {
+        >div {
+            margin-left: 5px;
+        }
+    }
+
 
     .hover-underlined:hover {
         text-decoration: underline;
@@ -170,6 +158,7 @@
       border: none;
       border-radius: 5px;
       height: 35px;
+      padding:0 5px;
     }
 
 
@@ -193,3 +182,40 @@
 ::v-deep .dx-datagrid-text-content {
     white-space: pre-wrap;
 }
+::v-deep .custom-button-checkbox {
+    border: 1px solid blue;
+    height: 91.5%;
+
+    .dx-button-content {
+      padding: 5px 5px;
+      display: inline-flex;
+      align-items: center;
+    }
+
+    span {
+      color: blue;
+    }
+  }
+  .custom-select-tab {
+    color: white;
+    background-color: blue;
+    border: none;
+    border-radius: 5px;
+    display: inline-flex;
+    align-items: center;
+    height: 91.5%;
+  }
+  .button-open-tab {
+    color: #fff;
+    background-color: #00f;
+    font-size: 12px;
+    border: none;
+    border-radius: 5px;
+    margin-left: 3px;
+    cursor: pointer;
+    height: 100%;
+    width: 100px;
+  }
+  ::v-deep .dx-button-mode-contained {
+    height: 34px;
+  }
