update page pa-230

--- a/src/views/PA/PA2/PA230/style/style.scss
+++ b/src/views/PA/PA2/PA230/style/style.scss
@@ -6,40 +6,58 @@
     align-items: flex-start;
     align-items: center;
 }
-.format-settings{
+
+.format-settings {
     padding-top: 15px;
     font-size: 16px;
     display: flex;
     align-items: center;
-    .format-settings-text{
+
+    .format-settings-text {
         padding-left: 18px;
     }
 }
-.tax-select{
+
+.tax-select {
     padding-top: 15px;
 }
 
-.created-date{
+.created-date {
     padding-top: 15px;
     float: right;
     display: flex;
     align-items: center;
 }
 
-.global-year{
+.global-year {
     margin-top: 6px;
 }
 
-.send-mail-230{
+.send-mail-230 {
     float: right;
-    .mail-230{
+
+    .mail-230 {
         cursor: pointer;
     }
-    .group-mail-230{
+
+    .group-mail-230 {
         cursor: pointer;
         margin-top: 8px;
         margin-right: 13px;
         margin-left: 10px;
     }
 
+}
+
+.status-red {
+    background-color: #C73F09;
+    color: white;
+    padding: 3px 20px;
+    border-radius: 5px;
+}
+.status-blue {
+    background-color: #77933C;
+    color: white;
+    padding: 3px 20px;
+    border-radius: 5px;
 }
