--- a/src/views/PA/PA5/PA520/style/popupAddNew.scss
+++ b/src/views/PA/PA5/PA520/style/popupAddNew.scss
@@ -37,8 +37,8 @@
         color: white;
     }
 
-    #action-update {
-        display: none;
-    }
+    // #action-update {
+    //     display: none;
+    // }
 
 }
