--- a/src/views/PA/PA1/PA110/style/style.scss
+++ b/src/views/PA/PA1/PA110/style/style.scss
@@ -8,6 +8,14 @@
             width: 100px;
         }
     }
+    :deep .row-1.ant-row  {
+        .ant-form-item-label {
+        >label {
+            width: fit-content;
+        }
+        }
+       
+    }
     .top-content {
         margin-bottom: 10px;
         padding: 2px 4px;
@@ -40,7 +48,6 @@
         >div {
             border: 1px solid #d7d7d7;
             padding: 10px;
-            min-height: 700px;
         }
     }
     .ml-3 {
@@ -108,4 +115,18 @@
 
 .current-underlined {
   text-decoration: underline;
+}
+::v-deep .custom-layout col:first-child {
+    width: 40px !important;
+}
+#pa-110-gridContainer {
+    :deep td {
+      vertical-align: middle;
+    }
+    :deep .min-w-240 {
+        min-width: 240px;
+    }
+}
+:deep .dx-datagrid-text-content {
+    white-space: pre-wrap;
 }
