--- a/src/views/PA/PA6/PA620/style/style.scss
+++ b/src/views/PA/PA6/PA620/style/style.scss
@@ -2,7 +2,7 @@
     margin-top: 10px;
 
 
-    
+
     .total-user {
         background-color: #17375E;
         color: white;
@@ -88,8 +88,9 @@
     }
 
     .current-underlined {
-      text-decoration: underline;
+        text-decoration: underline;
     }
+
     ::v-deep .form-action {
         label {
             width: 120px;
@@ -151,14 +152,14 @@
         }
     }
 
-    .open-tab{
-      color: white;
-      background-color: blue;
-      font-size: 14px;
-      border: none;
-      border-radius: 5px;
-      height: 35px;
-      padding:0 5px;
+    .open-tab {
+        color: white;
+        background-color: blue;
+        font-size: 14px;
+        border: none;
+        border-radius: 5px;
+        height: 35px;
+        padding: 0 5px;
     }
 
 
@@ -182,21 +183,23 @@
 ::v-deep .dx-datagrid-text-content {
     white-space: pre-wrap;
 }
+
 ::v-deep .custom-button-checkbox {
     border: 1px solid blue;
     height: 91.5%;
 
     .dx-button-content {
-      padding: 5px 5px;
-      display: inline-flex;
-      align-items: center;
+        padding: 5px 5px;
+        display: inline-flex;
+        align-items: center;
     }
 
     span {
-      color: blue;
+        color: blue;
     }
-  }
-  .custom-select-tab {
+}
+
+.custom-select-tab {
     color: white;
     background-color: blue;
     border: none;
@@ -204,8 +207,9 @@
     display: inline-flex;
     align-items: center;
     height: 91.5%;
-  }
-  .button-open-tab {
+}
+
+.button-open-tab {
     color: #fff;
     background-color: #00f;
     font-size: 12px;
@@ -215,7 +219,16 @@
     cursor: pointer;
     height: 100%;
     width: 100px;
-  }
-  ::v-deep .dx-button-mode-contained {
+}
+
+::v-deep .dx-button-mode-contained {
     height: 34px;
-  }
+}
+
+.custom-button-delete {
+    cursor: pointer;
+    // background-color: red;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 1px solid gray;
+}
