update code fix page pa-620

--- a/src/views/PA/PA6/PA620/style/style.scss
+++ b/src/views/PA/PA6/PA620/style/style.scss
@@ -227,3 +227,7 @@
         height: 100%;
     }
 }
+
+::v-deep .dx-scrollable-scrollbars-alwaysvisible.dx-scrollable-both>.dx-scrollable-wrapper>.dx-scrollable-container>.dx-scrollable-content {
+    padding-bottom: 0px !important;
+}
