--- a/src/views/BF/BF6/BF640/style/style.scss
+++ b/src/views/BF/BF6/BF640/style/style.scss
@@ -1,1 +1,47 @@
-#bf-640 {}
+#bf-640 {
+    ::v-deep .ant-tabs-card.ant-tabs-top>.ant-tabs-nav .ant-tabs-tab-active {
+        background-color: #DCE6F2;
+    }
+
+    ::v-deep .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
+        color: black;
+    }
+
+    ::v-deep .ant-tabs-tab-btn {
+        color: gray;
+    }
+
+    ::v-deep .ant-tabs-top>.ant-tabs-nav {
+        margin: 0px;
+    }
+
+    #step1 {
+        .search-form {
+            background-color: white;
+        }
+
+        ::v-deep .month-custom-1 {
+            padding-left: 15px;
+            border-radius: 5px;
+            margin-right: 10px;
+            color: white;
+            background-color: #A6A6A6;
+            width: 90px;
+
+            .dp__input {
+                color: white;
+                padding: 0px;
+                border: none;
+                height: 30px;
+            }
+
+            .dp__icon {
+                display: none;
+            }
+
+            .dp__input {
+                background-color: #A6A6A6;
+            }
+        }
+    }
+}
