--- a/src/views/BF/BF6/BF640/style/style.scss
+++ b/src/views/BF/BF6/BF640/style/style.scss
@@ -16,32 +16,40 @@
     }
 
     #step1 {
-        .search-form {
-            background-color: white;
+        .search-form-step-1 {
+            background-color: #f1f3f4;
+            padding-top: 10px;
+            padding-left: 10px;
+            padding-bottom: 5px;
         }
 
-        ::v-deep .month-custom-1 {
-            padding-left: 15px;
-            border-radius: 5px;
-            margin-right: 10px;
-            color: white;
-            background-color: #A6A6A6;
-            width: 90px;
+        ::v-deep .custom-checkbox-search {
+            margin-bottom: 4px;
+            cursor: pointer;
 
-            .dp__input {
-                color: white;
-                padding: 0px;
-                border: none;
-                height: 30px;
-            }
-
-            .dp__icon {
-                display: none;
-            }
-
-            .dp__input {
-                background-color: #A6A6A6;
+            >div {
+                margin-right: 5px;
             }
         }
+
+        .custom-note {
+            >span {
+                font-size: 11px;
+                color: #666666;
+                padding-left: 5px;
+            }
+        }
+
+        ::v-deep .fix-width-label {
+            label {
+                width: 110px;
+            }
+        }
+
+        .title-table {
+            justify-content: space-between;
+            margin-top: 10px;
+        }
+
     }
 }
