--- a/src/views/BF/BF6/BF640/style/style.scss
+++ b/src/views/BF/BF6/BF640/style/style.scss
@@ -49,7 +49,75 @@
         .title-table {
             justify-content: space-between;
             margin-top: 10px;
+
+            .action-save {
+                cursor: pointer;
+            }
+        }
+    }
+
+    #step2 {
+        .search-form-step-1 {
+            background-color: #f1f3f4;
+            padding-top: 10px;
+            padding-left: 10px;
+            padding-bottom: 5px;
         }
 
+        ::v-deep .custom-checkbox-search {
+            margin-bottom: 4px;
+            cursor: pointer;
+
+            >div {
+                margin-right: 5px;
+            }
+        }
+
+        .custom-note {
+            >span {
+                font-size: 11px;
+                color: #666666;
+                padding-left: 5px;
+            }
+        }
+
+        ::v-deep .fix-width-label {
+            label {
+                width: 110px;
+            }
+        }
+
+        .title-table {
+            justify-content: space-between;
+            margin-top: 10px;
+
+            .action-save {
+                cursor: pointer;
+            }
+        }
+
+        .month-custom-1 {
+            padding-left: 20px;
+            border-radius: 5px;
+            margin-right: 10px;
+            color: white;
+            background-color: black;
+            width: 120px;
+
+            ::v-deep .dp__input {
+                color: white;
+                padding: 0px;
+                border: none;
+                height: 30px;
+            }
+
+            ::v-deep .dp__icon {
+                display: none;
+            }
+
+            ::v-deep .dp__input {
+                background-color: black;
+            }
+        }
     }
 }
