--- a/src/views/BF/BF6/BF640/style/style.scss
+++ b/src/views/BF/BF6/BF640/style/style.scss
@@ -15,6 +15,14 @@
         margin: 0px;
     }
 
+    .custom-note {
+        span {
+            font-size: 11px;
+            color: #666666;
+            padding-left: 5px;
+        }
+    }
+
     #step1 {
         .search-form-step-1 {
             background-color: #f1f3f4;
@@ -30,16 +38,8 @@
             >div {
                 margin-right: 5px;
             }
-        }
-
-        .custom-note {
-            >span {
-                font-size: 11px;
-                color: #666666;
-                padding-left: 5px;
-            }
-        }
-
+        } 
+        
         ::v-deep .fix-width-label {
             label {
                 width: 110px;
@@ -73,13 +73,7 @@
             }
         }
 
-        .custom-note {
-            >span {
-                font-size: 11px;
-                color: #666666;
-                padding-left: 5px;
-            }
-        }
+
 
         ::v-deep .fix-width-label {
             label {
