--- a/src/views/BF/BF6/BF620/style/searchArea.scss
+++ b/src/views/BF/BF6/BF620/style/searchArea.scss
@@ -1,5 +1,8 @@
 .search-group {
-  .search-detail {
+    background: #f1f3f4;
+    padding: 8px 5px;
+    margin-bottom: 10px;
+  .search-date {
     display: flex;
     .search-text {
       margin-right: 20px;
@@ -8,9 +11,12 @@
       background-color: #a6a6a6;
       padding-left: 10px;
       border-radius: 5px;
-      margin-right: 10px;
+      padding-right: 10px;
       color: white;
-
+      height: 32px;
+      .dp__theme_light {
+        height: 100% !important;
+      }
       .dp__input {
         color: white;
         padding: 0px;
@@ -28,6 +34,47 @@
       .dp__input {
         background-color: black;
       }
+    }
+    :deep .dx-radiogroup-horizontal {
+      .dx-radiobutton {
+        margin-right: 4px;
+        margin-left: 3px;
+      }
+    }
+    :deep .dx-checkbox-container {
+        margin-left: 10px;
+    }
+  }
+  .search-production {
+    :deep .ant-form-item-label > label {
+        height: 26px;
+    }
+    :deep .check-box-group {
+      .dx-checkbox-text {
+        margin-left: 10px;
+        border-radius: 5px;
+        color: white;
+        text-align: center;
+        width: 90px;
+      }
+      &:nth-child(1) .dx-checkbox-text {
+        background-color: #93cddd;
+      }
+      &:nth-child(2) .dx-checkbox-text {
+        background-color: #0070c0;
+      }
+      &:nth-child(3) .dx-checkbox-text {
+        background-color: #9bbb59;
+      }
+      &:nth-child(4) .dx-checkbox-text {
+        background-color: #c00000;
+      }
+    }
+  }
+  .search-company {
+    :deep .ant-form-item-label > label {
+      width: 120px;
+      padding-left: 10px;
     }
   }
 }
