--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -97,11 +97,13 @@ $lenght: 50;
   .mb-#{$i} {
     margin-bottom: $i+ px;
   }
-  .mx-#{$i}{
+
+  .mx-#{$i} {
     margin-left: $i+ px;
     margin-right: $i+ px;
   }
-  .my-#{$i}{
+
+  .my-#{$i} {
     margin-top: $i+ px;
     margin-bottom: $i+ px;
   }
@@ -157,4 +159,20 @@ $lenght: 50;
 .ant-tooltip-inner {
   // background-color: black !important;
   color: white !important;
+}
+
+.ant-tabs-card.ant-tabs-top>.ant-tabs-nav .ant-tabs-tab-active {
+  background-color: #DCE6F2;
+}
+
+.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
+  color: black;
+}
+
+.ant-tabs-tab-btn {
+  color: gray;
+}
+
+.ant-tabs-top>.ant-tabs-nav {
+  margin: 0px;
 }
