--- a/src/views/BF/BF6/BF640/style/style.scss
+++ b/src/views/BF/BF6/BF640/style/style.scss
@@ -73,19 +73,21 @@
         }
 
         .month-custom-1 {
-            padding-left: 20px;
+            padding-left: 10px;
             border-radius: 5px;
             margin-right: 10px;
             color: white;
             background-color: black;
-            width: 120px;
+            width: 90px;
+            font-size: 12px;
 
             ::v-deep .dp__input {
                 color: white;
                 padding: 0px;
                 border: none;
-                height: 23px;
+                height: 24px;
                 background-color: black;
+                font-size: 14px;
             }
 
             ::v-deep .dp__icon {
