--- a/src/views/PA/PA4/PA420/style/style.scss
+++ b/src/views/PA/PA4/PA420/style/style.scss
@@ -129,7 +129,7 @@
             color: white;
             padding: 0px;
             border: none;
-            height: 30px;
+            height: 24px;
             background-color: #A6A6A6;
         }
 
@@ -149,7 +149,7 @@
             color: white;
             padding: 0px;
             border: none;
-            height: 30px;
+            height: 24pxs;
             background-color: black;
         }
 
