--- a/src/views/BF/BF6/BF630/style/styleTabs.scss
+++ b/src/views/BF/BF6/BF630/style/styleTabs.scss
@@ -1,4 +1,11 @@
+  .title-table {
+    justify-content: space-between;
+    margin-top: 10px;
 
+    .action-save {
+        cursor: pointer;
+    }
+  }
   .header-grid-form{
     .custom-flex {
         display: flex;
