--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -174,3 +174,7 @@ $lenght: 50;
 .dx-scrollable-scrollbars-alwaysvisible.dx-scrollable-both>.dx-scrollable-wrapper>.dx-scrollable-container>.dx-scrollable-content {
   padding-bottom: 0px !important;
 }
+
+.ant-select-item-group { 
+  font-size: 14px;
+}
