--- a/src/views/PA/PA7/PA730/style/style.scss
+++ b/src/views/PA/PA7/PA730/style/style.scss
@@ -90,6 +90,6 @@
     text-align: left !important;
   }
   .text-right {
-    text-align: right !important;;
+    text-align: right !important;
   }
 }
