--- a/src/views/PA/PA2/PA230/style/style.scss
+++ b/src/views/PA/PA2/PA230/style/style.scss
@@ -33,6 +33,12 @@
     cursor: pointer;
 }
 
+.form-mail-2 {
+  display: flex;
+  img{
+    width: 70px;
+  }
+}
 
 .status-red {
     background-color: #C73F09;
