change process status

--- a/src/views/BF/BF6/BF610/style/style.scss
+++ b/src/views/BF/BF6/BF610/style/style.scss
@@ -81,5 +81,8 @@
     :deep .dx-checkbox-has-text.mr-5 {
         margin-right: 10px;
     }
+    :deep .buttonModal {
+        height: 27px !important;
+    }
 
 }
