--- a/src/views/PA/PA5/PA530/style/style.scss
+++ b/src/views/PA/PA5/PA530/style/style.scss
@@ -101,6 +101,9 @@
             text-align: center;
         }
     }
+    .ant-switch-checked {
+        background-color: black;
+    }
 }
 
 ::v-deep .dx-datagrid-text-content {
