--- a/src/views/BF/BF6/BF650/style/style.scss
+++ b/src/views/BF/BF6/BF650/style/style.scss
@@ -92,6 +92,16 @@
                 }
             }
         }
-        
+        .btn-modal-save {
+            background-color: black;
+            color: white;
+            padding: 4px 10px 4px 5px;
+            border-radius: 5px;
+            margin-left: 10px;
+            cursor: pointer;
+        }
+        .fz-24 {
+            font-size: 18px;
+        }
     }
 }
