--- a/src/views/BF/BF6/BF630/style/styleTabs.scss
+++ b/src/views/BF/BF6/BF630/style/styleTabs.scss
@@ -76,3 +76,11 @@
       }
     }
   }
+  .btn-modal-save {
+    background-color: black;
+    color: white;
+    padding: 4px 10px 4px 5px;
+    border-radius: 5px;
+    margin-left: 10px;
+    cursor: pointer;
+  }
