--- a/src/views/BF/BF3/BF310/style/popupStyle.scss
+++ b/src/views/BF/BF3/BF310/style/popupStyle.scss
@@ -1,10 +1,10 @@
-::v-deep .clr {
+:deep .clr {
     label {
         color: red;
     }
 }
 
-::v-deep .clr-text {
+:deep .clr-text {
     color: red;
 }
 
@@ -84,11 +84,11 @@
     }
 }
 
-::v-deep .ant-table-tbody>tr>td {
+:deep .ant-table-tbody>tr>td {
     padding: 5 10px !important;
 }
 
-::v-deep .ant-table-cell {
+:deep .ant-table-cell {
     padding: 10px !important;
 }
 
@@ -96,11 +96,11 @@
     height: 45px;
 }
 
-::v-deep .dx-toolbar .dx-toolbar-after {
+:deep .dx-toolbar .dx-toolbar-after {
     margin-top: -35px !important;
 }
 
-::v-deep .dx-datagrid-headers.dx-datagrid-nowrap {
+:deep .dx-datagrid-headers.dx-datagrid-nowrap {
     margin-top: -35px;
 }
 
@@ -109,17 +109,20 @@
     margin-bottom: 10px;
 }
 
-::v-deep img-preview {
+:deep img-preview {
     position: relative;
     width: 100%;
 }
 
-::v-deep img {
+:deep .key-2 .img-preview img {
     position: relative;
     width: 100%;
     height: 345px;
-    margin-top: 20px;
-
+}
+:deep .key-4 .img-preview img {
+    position: relative;
+    width: 100%;
+    height: 200px;
 }
 
 .imgPreview img {
@@ -162,17 +165,17 @@
     border-top: none;
 }
 
-::v-deep .ant-collapse-arrow {
+:deep .ant-collapse-arrow {
     font-size: 14px !important;
 }
 
-::v-deep .dx-datagrid-group-opened::before,
-::v-deep .dx-datagrid-group-closed::before {
+:deep .dx-datagrid-group-opened::before,
+:deep .dx-datagrid-group-closed::before {
     color: black;
     font-size: 25px;
     margin-left: 7px;
 }
-::v-deep .custom-label-master-detail {
+:deep .custom-label-master-detail {
     border: 1px solid #ccc;
     margin: 5px 0 10px 0 !important;
     padding: 10px 0px;
@@ -195,23 +198,23 @@
     }
 }
 
-::v-deep .ant-form-item-control-input-content{
+:deep .ant-form-item-control-input-content{
     display: inline-flex;
     align-items: center;
     column-gap: 5px;
 }
-::v-deep img.ant-image-img{
-    min-width: 60%;
-    // width: auto !important;
-    margin-top: 0;
-    max-height: 255px;
+:deep .key-2 img.ant-image-img{
+    max-height: 345px;
+}
+:deep .key-4 img.ant-image-img{
+    max-height: 200px;
 }
 #bf-320-popup-datagrid{
     max-height: 141px;
 }
-::v-deep input.dp__input.dp__input_icon_pad {
+:deep input.dp__input.dp__input_icon_pad {
     height: 34px;
 }
-::v-deep .ant-form-item-control {
+:deep .ant-form-item-control {
     display: table;
 }
